# correlation-parser

./: Cargo.toml
correlation/src/: action.rs  lib.rs  reactor.rs  state.rs
correlation/src/config/: deser.rs  mod.rs
correlation/src/config/action/: mod.rs
correlation/src/config/action/deser/: mod.rs
correlation/src/config/action/message/: builder.rs  deser.rs  mod.rs  test.rs
correlation/src/context/: base.rs  context_map.rs  linear.rs  mod.rs
correlation/src/context/map/: map.rs
correlation/src/correlator/: factory.rs  mod.rs  test.rs
correlation/src/dispatcher/: reactor.rs
correlation/src/dispatcher/handlers/: exit.rs  message.rs  timer.rs
correlation/src/test_utils/: template.rs
correlation/tests/correlator/: mod.rs
src/: lib.rs  logtemplate.rs
