[package]
name = "correlation-parser"
version = "0.1.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
build = "build.rs"

[lib]
crate_type = ["dylib"]

[dependencies]
log = "0.3"
serde = "0.6"
serde_json = "0.6"

[dependencies.correlation]
path = "../correlation"
version = "0.4"

[dependencies.syslog-ng-common]
path = "../syslog-ng-rs/syslog-ng-common/"

[build-dependencies.syslog-ng-build]
path = "../syslog-ng-rs/syslog-ng-build/"
